# hardhat-blended-plugin

./: .dependency-cruiser.js  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .mocharc.json  .npmrc  README.md  eslint.config.js  mocha.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
examples/basic/: .gitignore  hardhat.config.ts  package.json  pnpm-lock.yaml
examples/basic/test/: BasicContract.test.ts
examples/lottery/: .gitignore  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
examples/lottery/contracts/: IRandomGenerator.sol
examples/lottery/contracts/random-generator/: Cargo.toml
examples/lottery/contractsBAK/: Lottery.sol
examples/lottery/test/: Lottery.ts
src/: compiler.ts  index.ts  type-extension.ts  type-extensions.ts  utils.ts
src/compiler/: index.ts  rustInstaller.ts  rwasm.ts  utils.ts  wasm.ts
src/config/: contracts-resolver.ts  defaults.ts  errors.ts  index.ts  schema.ts
src/internal/compiler/: artifacts.ts  build.ts  constants.ts  errors.ts  index.ts  types.ts
src/internal/docker/: index.ts  types.ts
src/internal/tester/: errors.ts  index.ts
src/tasks/: index.ts
src/tasks/clean/: index.ts
src/tasks/compile/: index.ts
src/tasks/node/: index.ts
src/tasks/test/: index.ts
src/tester/: index.ts
src/utils/: logger.ts
test/: helpers.ts  utils.test.ts
test/config/: schema.test.ts
test/fixtures/basic/: .eslintrc.json  .gitignore  README.md  hardhat.config.ts  package.json
(+8 files in other folders)
