[package]
edition = "2021"
name = "random-generator"
version = "0.1.0"

[dependencies]
fluentbase-sdk = {git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false}
rand_chacha = {version = "0.3", default-features = false}

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "fluentbase-sdk/std",
]
